--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="your name">
-    <meta name="description" content="description of your page">
-    <title>My Page Title</title>
+    <meta name="author" content="Adam Nangini">
+    <meta name="description" content="A short description of John F. Kennedy.">
+    <title>John F.Kennedy</title>
   </head>
   <body>
-    <!--     Content goes here!         -->
+    <article>
+      <header>
+        <h1> John F. Kennedy</h1>
+        <h2> <span class="author">Adam Nangini</span> <a href= "https://www.codecademy.com/users/Adam1T9/achievements">Code Academy Achievments</a></h2>
+      </header>
+<section class= "main">
+<h3> Biography</h3>
+img src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1440,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1495569254/170519-clift-jfk-press-tease_tsyutt"/
+<p>
+President John F. Kennedy (JFK)was the 35th President of the United States of America. He was the born on May 29th, 1927 and was unfortunatly assasinated on
+November 22nd, 1963. His Vice President was Lyndon B. Johnson. Kennedy is most famous for his handeling of the Cuban Missile Crisis in October 1962 and propogation of the space race.
+The Cuban Missile Crisis was an incredible show of diplomatic intelligence and strategy. Kennedy pooled the rescoruces of the CIA and his secrect committe EXCOMM together to thwart
+  attempt by the Soviets to complete the
+</p>
+
+</section>
+    </article>
   </body>
+
 </html>
