All HTML Passes in this version

--- a/index.html
+++ b/index.html
@@ -14,16 +14,26 @@
       </header>
 <section class= "main">
 <h3> Biography</h3>
-img src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1440,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1495569254/170519-clift-jfk-press-tease_tsyutt"/
+<img src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1440,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1495569254/170519-clift-jfk-press-tease_tsyutt" /> 
 <p>
-President John F. Kennedy (JFK)was the 35th President of the United States of America. He was the born on May 29th, 1927 and was unfortunatly assasinated on
-November 22nd, 1963. His Vice President was Lyndon B. Johnson. Kennedy is most famous for his handeling of the Cuban Missile Crisis in October 1962 and propogation of the space race.
-The Cuban Missile Crisis was an incredible show of diplomatic intelligence and strategy. Kennedy pooled the rescoruces of the CIA and his secrect committe EXCOMM together to thwart
-  attempt by the Soviets to complete the
+President John F. Kennedy (JFK)was the 35th President of the United States of America. He was the born on May 29th, 1927 and was unfortunately assassinated on November 22nd, 1963. His Vice President was Lyndon B. Johnson. He served in the US Navy during WWII in the Pacific theatre and was educated at Harvard University. Kennedy is most famous for his handling of the Cuban Missile Crisis in October 1962. During this time the world held its breath as it felt it was on the verge of nuclear war.
 </p>
-
+<h3> The Cuban Missile Crisis</h3>
+<p>
+The Cuban Missile Crisis was an incredible show of diplomatic intelligence and strategy. Kennedy pooled the resources of the CIA and his secret committee Executive Committee of the National Security Council  (EXCOMM) together to thwart attempt by the Soviets to complete the development of MRBM’s on the island of Cuba. Under the consultation of key members of EXCOMM such as Robert McNamara and General Taylor, Kennedy decided to create a naval blockade that prevented any Soviet ships from crossing into Cuban waters. This was an incredibly genius move because as per his speech on October 22nd, 1962, Kennedy managed to paint the US as standing up for what was right and if violence was to occur it would be the Soviet’s decision to become the aggressor.
+</p>
 </section>
-    </article>
+<section class= "sources">
+<ul>
+  <li>
+    <a href="http://microsites.jfklibrary.org/cmc/oct16/doc3.html">EXCOMM “Off the Record Meeting on Cuba” Recorded by John F. Kennedy. The White House. In John F. Kennedy Presidential and Museum Archives.October 16 1962.</a>
+  </li>
+  <li>
+    <a href="https://www.jfklibrary.org/Asset-Viewer/Archives/JFKWHA-142-001.aspx.">Kennedy, John F., writer. "Radio and Television Address to the American People on the Soviet Arms Build-up in Cuba, 22 October 1962." In John F. Kennedy Presidential and Museum Archives. October 22, 1962. Accessed November 24, 2017</a>
+  </li>
+</ul>
+</section>
+  </article>
   </body>
 
 </html>
