linked CSS page, need to start it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="Adam Nangini">
     <meta name="description" content="A short description of John F. Kennedy.">
     <title>John F.Kennedy</title>
+    <link type="text/css" rel="style" href="style.css"/>
   </head>
   <body>
     <article>
@@ -14,7 +15,7 @@
       </header>
 <section class= "main">
 <h3> Biography</h3>
-<img src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1440,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1495569254/170519-clift-jfk-press-tease_tsyutt" /> 
+<img src="https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1440,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1495569254/170519-clift-jfk-press-tease_tsyutt" />
 <p>
 President John F. Kennedy (JFK)was the 35th President of the United States of America. He was the born on May 29th, 1927 and was unfortunately assassinated on November 22nd, 1963. His Vice President was Lyndon B. Johnson. He served in the US Navy during WWII in the Pacific theatre and was educated at Harvard University. Kennedy is most famous for his handling of the Cuban Missile Crisis in October 1962. During this time the world held its breath as it felt it was on the verge of nuclear war.
 </p>
