CSS starting to pass

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="author" content="Adam Nangini">
     <meta name="description" content="A short description of John F. Kennedy.">
     <title>John F.Kennedy</title>
-    <link type="text/css" rel="style" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <article>
       <header>
         <h1> John F. Kennedy</h1>
-        <h2> <span class="author">Adam Nangini</span> <a href= "https://www.codecademy.com/users/Adam1T9/achievements">Code Academy Achievments</a></h2>
+        <h2> <span class="author"> By: Adam Nangini</span> <a href= "https://www.codecademy.com/users/Adam1T9/achievements">Code Academy Achievments</a></h2>
       </header>
 <section class= "main">
 <h3> Biography</h3>
@@ -25,6 +25,7 @@ The Cuban Missile Crisis was an incredible show of diplomatic intelligence and s
 </p>
 </section>
 <section class= "sources">
+  <h3> Bibliography</h3>
 <ul>
   <li>
     <a href="http://microsites.jfklibrary.org/cmc/oct16/doc3.html">EXCOMM “Off the Record Meeting on Cuba” Recorded by John F. Kennedy. The White House. In John F. Kennedy Presidential and Museum Archives.October 16 1962.</a>
