all tests currently pass this except reflection; needs to be added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Adam Nangini">
     <meta name="description" content="A short description of John F. Kennedy.">
     <title>John F.Kennedy</title>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="./style.css"/>
   </head>
   <body>
     <article>
